--- a/src/app/assistance-listing/components/account-identification.template.html
+++ b/src/app/assistance-listing/components/account-identification.template.html
@@ -11,7 +11,7 @@
 
     <ng-container *ngFor="let textbox of codeTextboxes">
       <samText [name]="textbox.name"
-               [control]="textbox.control"
+               [formControl]="textbox.control"
       ></samText>
     </ng-container>
 
