--- a/src/app/role-management/role-sidenav/role-sidenav.template.html
+++ b/src/app/role-management/role-sidenav/role-sidenav.template.html
@@ -32,7 +32,10 @@
         </samAccordionSection>
       </samAccordion>
       <div class = "tx-pad">
-        <samText [(ngModel)]="newDomain" [name]="'New-Domain-Text-Input'" [errorMessage]="textErrorMessage"></samText>
+        <labelWrapper [name]="'Domain-Text-Wrapper'" [errorMessage]="textErrorMessage">
+          <input type="text" [(ngModel)]="newDomain" [name] = "'New-Domain-Text-Input'" placeholder="Add New..." (keydown) = "onEnterClick($event)">
+        </labelWrapper>
+        <!--<samText [(ngModel)]="newDomain" [name]="'New-Domain-Text-Input'" [errorMessage]="textErrorMessage"></samText>-->
         <span class="fa fa-plus-circle"  [ngClass] = "textErrorMessage.length > 0 ? 'btn-plus-error' : 'btn-plus' " aria-hidden="true" (click) = SubmitDomain()></span>
       </div>
     </div>
