--- a/src/styles/components/role-management/_role-content.scss
+++ b/src/styles/components/role-management/_role-content.scss
@@ -23,6 +23,7 @@
     text-decoration: underline;
     color: #0071bc;
     padding-right: 0.5em;
+    cursor: pointer;
   }
   .content-row{
     border-style: solid;
